2022-11-30  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha02: USA 1, Iran 0';git push
	git tag -a 5.1.4-alpha02 -m 'all: no cmp NC_STRING, NC_VLEN';git push --tags

	* Explicitly disallow compression of variable-length types

2022-11-29  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha01: Seal Bottling';git push
	git tag -a 5.1.4-alpha01 -m 'Functionally identical to 5.1.3. all: NCO_ERR_FL_LN';git push --tags

	* Add Add NCO_ERR_FL_LN macro for automatic file/line debugging info, start to use in nco_map.c

	* nco_grd_nfr(): Check bnd_dmn_nm existance before access, prevent segfault inferring unstructured grids

2022-11-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.3 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.3: Mauna Loa';git push
	git tag -a 5.1.3 -m 'ncremap automagical hrz_mrv determination/usage';git push --tags

	* NCO 5.1.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.3-alpha02: Thai Massage';git push
	git tag -a 5.1.3-alpha02 -m 'ncremap automagical hrz_mrv determination/usage';git push --tags

2022-11-25  Charlie Zender  <zender@uci.edu>

	* Realize that 20221108 change in 5.1.2 broke nco_ntp_vrt() for vrt_mrv data like eamxx
	because datasets were no longer permuted to hrz_mrv that nco_ntp_vrt() assumed

	* nco_ntp_vrt() use flg_hrz_mrv, appears to work

	* nco_ntp_vrt() add stubs to automagically determine flg_hrz_mrv/flr_vrt_mrv

	* nco_map_rgr() assign col_nm_in to ncol_p not ncol_d

2022-11-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.3-alpha01: Tavern House';git push
	git tag -a 5.1.3-alpha01 -m 'Functionally identical to 5.1.2';git push --tags

	* Simplify vertical interpolation if input vertical dimension is most-rapidly-varying (--vrt_mrv)

2022-11-18  Charlie Zender  <zender@uci.edu>
